{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 1065,
  "lineage": "e6fefc27-3763-99f5-a1b5-46dc45d379bd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "andrew_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:183989794756:loadbalancer/app/terraform-example-alb/f24e3eb9c867a75a",
            "arn_suffix": "app/terraform-example-alb/f24e3eb9c867a75a",
            "dns_name": "terraform-example-alb-1609834498.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:183989794756:loadbalancer/app/terraform-example-alb/f24e3eb9c867a75a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-example-alb",
            "security_groups": [
              "sg-008984d9403430dea"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00755bacaffba5a4d"
              },
              {
                "subnet_id": "subnet-00d8ab24e6de6ad28"
              },
              {
                "subnet_id": "subnet-072eb5394b7d111dc"
              }
            ],
            "subnets": [
              "subnet-00755bacaffba5a4d",
              "subnet-00d8ab24e6de6ad28",
              "subnet-072eb5394b7d111dc"
            ],
            "tags": {
              "Name": "Andrew-alb"
            },
            "tags_all": {
              "Name": "Andrew-alb"
            },
            "vpc_id": "vpc-07e55cf3598a99cd3",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.andrew_alb",
            "aws_subnet.main",
            "aws_vpc.andrew_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:183989794756:listener/app/terraform-example-alb/f24e3eb9c867a75a/1e8ef64dc04c085e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:183989794756:targetgroup/terraform-example-alb-target/03cfbb3b71b05c08",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:183989794756:listener/app/terraform-example-alb/f24e3eb9c867a75a/1e8ef64dc04c085e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:183989794756:loadbalancer/app/terraform-example-alb/f24e3eb9c867a75a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.andrew_alb",
            "aws_alb_target_group.group",
            "aws_security_group.andrew_alb",
            "aws_subnet.main",
            "aws_vpc.andrew_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:183989794756:listener/app/terraform-example-alb/f24e3eb9c867a75a/230be415a73a1bd6",
            "certificate_arn": "arn:aws:acm:eu-west-2:183989794756:certificate/48cb342e-3e5b-497e-9259-eb73a314cf2e",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:183989794756:targetgroup/terraform-example-alb-target/03cfbb3b71b05c08",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:183989794756:listener/app/terraform-example-alb/f24e3eb9c867a75a/230be415a73a1bd6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:183989794756:loadbalancer/app/terraform-example-alb/f24e3eb9c867a75a",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.andrew_alb",
            "aws_alb_target_group.group",
            "aws_security_group.andrew_alb",
            "aws_subnet.main",
            "aws_vpc.andrew_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:183989794756:targetgroup/terraform-example-alb-target/03cfbb3b71b05c08",
            "arn_suffix": "targetgroup/terraform-example-alb-target/03cfbb3b71b05c08",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/terraform.lesleg.click",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:183989794756:targetgroup/terraform-example-alb-target/03cfbb3b71b05c08",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terraform-example-alb-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07e55cf3598a99cd3"
          },
          "dependencies": [
            "aws_vpc.andrew_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:183989794756:internet-gateway/igw-0a2ccf0404329e8b2",
            "id": "igw-0a2ccf0404329e8b2",
            "owner_id": "183989794756",
            "tags": {
              "Name": "Andrew-example-internet-gateway"
            },
            "tags_all": {
              "Name": "Andrew-example-internet-gateway"
            },
            "vpc_id": "vpc-07e55cf3598a99cd3"
          },
          "dependencies": [
            "aws_vpc.andrew_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "andrew_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a2ccf0404329e8b2",
            "id": "r-rtb-04c99b45cdedd76851080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04c99b45cdedd7685",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.andrew_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "andrew_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:183989794756:security-group/sg-008984d9403430dea",
            "description": "Terraform load balancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008984d9403430dea",
            "ingress": [
              {
                "cidr_blocks": [
                  "51.186.33.70/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "51.186.33.70/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform_alb_security_group",
            "name_prefix": "",
            "owner_id": "183989794756",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Andrew-alb-security-group"
            },
            "tags_all": {
              "Name": "Andrew-alb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e55cf3598a99cd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.andrew_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:183989794756:security-group/sg-08d6d1474d3184de4",
            "description": "Terraform example security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d6d1474d3184de4",
            "ingress": [
              {
                "cidr_blocks": [
                  "51.186.33.70/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "51.186.33.70/32"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-008984d9403430dea"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform_security_group",
            "name_prefix": "",
            "owner_id": "183989794756",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Andrew-security-group"
            },
            "tags_all": {
              "Name": "Andrew-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e55cf3598a99cd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.andrew_alb",
            "aws_vpc.andrew_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:183989794756:security-group/sg-01766e22c8d866e53",
            "description": "Terraform example RDS MySQL server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01766e22c8d866e53",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08d6d1474d3184de4"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform_rds_security_group",
            "name_prefix": "",
            "owner_id": "183989794756",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "andrew-rds-security-group"
            },
            "tags_all": {
              "Name": "andrew-rds-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e55cf3598a99cd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.andrew_alb",
            "aws_security_group.default",
            "aws_vpc.andrew_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:183989794756:subnet/subnet-00d8ab24e6de6ad28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-00d8ab24e6de6ad28",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "183989794756",
            "tags": {
              "Name": "public-eu-west-2a"
            },
            "tags_all": {
              "Name": "public-eu-west-2a"
            },
            "vpc_id": "vpc-07e55cf3598a99cd3"
          },
          "dependencies": [
            "aws_vpc.andrew_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:183989794756:subnet/subnet-00755bacaffba5a4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00755bacaffba5a4d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "183989794756",
            "tags": {
              "Name": "public-eu-west-2b"
            },
            "tags_all": {
              "Name": "public-eu-west-2b"
            },
            "vpc_id": "vpc-07e55cf3598a99cd3"
          },
          "dependencies": [
            "aws_vpc.andrew_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:183989794756:subnet/subnet-072eb5394b7d111dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-072eb5394b7d111dc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "183989794756",
            "tags": {
              "Name": "public-eu-west-2c"
            },
            "tags_all": {
              "Name": "public-eu-west-2c"
            },
            "vpc_id": "vpc-07e55cf3598a99cd3"
          },
          "dependencies": [
            "aws_vpc.andrew_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:183989794756:subnet/subnet-027ca4d7671e6950f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-027ca4d7671e6950f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "183989794756",
            "tags": {
              "Name": "Andrew-rds-eu-west-2a"
            },
            "tags_all": {
              "Name": "Andrew-rds-eu-west-2a"
            },
            "vpc_id": "vpc-07e55cf3598a99cd3"
          },
          "dependencies": [
            "aws_vpc.andrew_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:183989794756:subnet/subnet-013ef8d0470625ea0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-013ef8d0470625ea0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "183989794756",
            "tags": {
              "Name": "Andrew-rds-eu-west-2b"
            },
            "tags_all": {
              "Name": "Andrew-rds-eu-west-2b"
            },
            "vpc_id": "vpc-07e55cf3598a99cd3"
          },
          "dependencies": [
            "aws_vpc.andrew_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:183989794756:subnet/subnet-0e581fdf82c8f66fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0e581fdf82c8f66fe",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "183989794756",
            "tags": {
              "Name": "Andrew-rds-eu-west-2c"
            },
            "tags_all": {
              "Name": "Andrew-rds-eu-west-2c"
            },
            "vpc_id": "vpc-07e55cf3598a99cd3"
          },
          "dependencies": [
            "aws_vpc.andrew_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "andrew_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:183989794756:vpc/vpc-07e55cf3598a99cd3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-069bd3faad24373d3",
            "default_route_table_id": "rtb-04c99b45cdedd7685",
            "default_security_group_id": "sg-04ae713a9dba5f10d",
            "dhcp_options_id": "dopt-047cdb54f75bc6ae2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07e55cf3598a99cd3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04c99b45cdedd7685",
            "owner_id": "183989794756",
            "tags": {
              "Name": "Andrew-example-vpc"
            },
            "tags_all": {
              "Name": "Andrew-example-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}